--- a/src/app/pages/fg-in/fg-in.component.html
+++ b/src/app/pages/fg-in/fg-in.component.html
@@ -77,21 +77,21 @@
       <table class="excel-table">
         <thead>
           <tr>
-            <th>Factory</th>
-            <th class="row-header">No</th>
-            <th>Ngày</th>
-            <th>Batch</th>
-            <th>Mã TP</th>
-            <th>LOT</th>
-            <th>LSX</th>
-            <th>QTY</th>
-            <th>Carton</th>
-            <th>ODD</th>
-            <th>Vị Trí</th>
-            <th>Ghi chú</th>
-            <th>Khách</th>
-            <th>Lock</th>
-            <th>Xóa</th>
+            <th class="th-two-line"><span class="th-vi">Nhà máy</span><span class="th-en">FACTORY</span></th>
+            <th class="row-header th-two-line"><span class="th-vi">STT</span><span class="th-en">NO</span></th>
+            <th class="th-two-line"><span class="th-vi">Ngày</span><span class="th-en">DATE</span></th>
+            <th class="th-two-line"><span class="th-vi">Batch</span><span class="th-en">BATCH</span></th>
+            <th class="th-two-line"><span class="th-vi">Mã TP</span><span class="th-en">MATERIAL CODE</span></th>
+            <th class="th-two-line"><span class="th-vi">LOT</span><span class="th-en">LOT</span></th>
+            <th class="th-two-line"><span class="th-vi">LSX</span><span class="th-en">LSX</span></th>
+            <th class="th-two-line"><span class="th-vi">Số lượng</span><span class="th-en">QTY</span></th>
+            <th class="th-two-line"><span class="th-vi">Thùng</span><span class="th-en">CARTON</span></th>
+            <th class="th-two-line"><span class="th-vi">Dư</span><span class="th-en">ODD</span></th>
+            <th class="th-two-line"><span class="th-vi">Vị trí</span><span class="th-en">LOCATION</span></th>
+            <th class="th-two-line"><span class="th-vi">Ghi chú</span><span class="th-en">NOTES</span></th>
+            <th class="th-two-line"><span class="th-vi">Khách</span><span class="th-en">CUSTOMER</span></th>
+            <th class="th-two-line"><span class="th-vi">Khóa</span><span class="th-en">LOCK</span></th>
+            <th class="th-two-line"><span class="th-vi">Xóa</span><span class="th-en">DELETE</span></th>
           </tr>
         </thead>
         <tbody>
